--- a/templates/conventions/actions/delete.html
+++ b/templates/conventions/actions/delete.html
@@ -30,7 +30,7 @@
                     <div class="fr-modal__footer">
                         <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
                             <li>
-                                <button type="button" class="fr-btn fr-btn--icon-left fr-fi-alert-line" id='delete_{{convention.uuid}}'>
+                                <button type="button" class="fr-btn fr-btn--icon-left fr-fi-delete-line" id='delete_{{convention.uuid}}'>
                                     Supprimer la convention
                                 </button>
                                 <script type="text/javascript" nonce="{{request.csp_nonce}}">
