--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
                     <div class="fr-col-lg-1 fr-col-md-3">
-                        <span class="fr-icon-mail-line fr-fi--xxl" aria-hidden="true"></span>
+                        <span class="fr-icon-draft-line fr-fi--xxl" aria-hidden="true"></span>
                     </div>
                     <div class="fr-col-lg-7 fr-col-md-9">
                         <h3>Côté instructeur</h3>
