--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -32,6 +32,7 @@
         <link rel="stylesheet" href="{% static "css/main.css" %}">
         <link rel="stylesheet" href="{% static "css/step_progressbar.css" %}">
         <link rel="stylesheet" href="{% static "css/user_feedback.css" %}">
+        <link rel="stylesheet" href="{% static "css/ui_siap.css" %}">
         {% block css_extras %}{% endblock %}
 
         <!--Js-->
