--- a/static/css/ui_siap.css
+++ b/static/css/ui_siap.css
@@ -1,5 +1,9 @@
+.fr-header__tools.flex_unset {
+  flex: unset;
+  position: relative
+}
 .fr-nav__btn[aria-controls="menu-/operation"] {
-  position: absolute;
+  position: relative;
 }
 .fr-nav__btn[aria-controls="menu-/operation"]::before {
   content: "";
@@ -12,4 +16,41 @@
   width: 100%;
   height: 2px;
   margin-top: 0;
+}
+.orange-background,
+.fr-nav__btn[aria-current].orange-background,
+.fr-nav__btn[aria-current].orange-background:hover,
+.fr-nav__btn[aria-current].orange-background:hover a {
+  background-color: #ff6f4c;
+  color: #fff;
+  text-decoration: none;
+}
+.navy-background,
+.navy-background a:hover {
+  background-color: var(--background-action-high-blue-france);
+  color: #fff
+}
+.navy-background:hover {
+  background-image: radial-gradient(circle, rgba(17, 17, 255, 0.3), rgba(17, 17, 255, 0.3) 3%);
+}
+.habilitation-bloc {
+  position: absolute;
+  background: #FFFFFF;
+  z-index: 100;
+  font-size: 14px;
+  right: 1rem;
+  top: auto;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  margin-right: 0;
+  box-shadow: 0 16px 16px -16px #00000052,0 8px 16px #0000001a;
+}
+.habilitation-bloc .fr-menu__list {
+  padding: 0;
+}
+.habilitation-bloc .fr-menu__list li {
+  text-align: left;
+}
+.habilitation-bloc .fr-menu__list li:hover a {
+  text-decoration: none;
 }
