--- a/templates/layout/siap/habilitations.html
+++ b/templates/layout/siap/habilitations.html
@@ -1,10 +1,13 @@
 <button class="fr-nav__btn orange-background" aria-expanded="false" aria-controls="list-habilitation" aria-current="true">
     {% for habilitation in request.session.habilitations %}
         {% if habilitation.id == request.session.habilitation_id %}
-            <a href="{{ request|get_change_habilitation_url:habilitation.id }}">
-                <b>{{ habilitation.groupe.libelleRole }}</b><br>
+            {{ habilitation.groupe.libelleRole }}<br>
+            {% if habilitation.sousTitre1 %}
+                {{ habilitation.sousTitre1 }}<br>
+            {% endif %}
+            {% if habilitation.sousTitre2 %}
                 {{ habilitation.sousTitre2 }}
-            </a>
+            {% endif %}
         {% endif %}
     {% endfor %}
 </button>
@@ -13,11 +16,14 @@
         {% for habilitation in request.session.habilitations %}
             {% if habilitation.id != request.session.habilitation_id %}
                 <li>
-                    <a class="fr-nav__link" href="{{ request|get_change_habilitation_url:habilitation.id }}"><b>{{ habilitation.groupe.libelleRole }}</b><br>
+                    <a class="fr-nav__link fr-p-1w" href="{{ request|get_change_habilitation_url:habilitation.id }}"><b>{{ habilitation.groupe.libelleRole }}</b><br>
                         {% if habilitation.sousTitre1 %}
                             {{ habilitation.sousTitre1 }}<br>
                         {% endif %}
-                        {{ habilitation.sousTitre2 }}</a>
+                        {% if habilitation.sousTitre2 %}
+                            {{ habilitation.sousTitre2 }}
+                        {% endif %}
+                    </a>
                 </li>
             {% endif %}
         {% endfor %}
