--- a/static/css/ui_siap.css
+++ b/static/css/ui_siap.css
@@ -5,9 +5,12 @@
 .fr-nav__btn[aria-controls="menu-/operation"] {
   position: relative;
 }
+.fr-nav__btn[aria-controls="list-habilitation"]::before {
+  display: none!important;
+}
 .fr-nav__btn[aria-controls="menu-/operation"]::before {
   content: "";
-  display: block;
+  display: none;
   background-color: var(--background-active-blue-france);
   position: absolute;
   top: auto;
@@ -25,6 +28,7 @@
   color: #fff;
   text-decoration: none;
 }
+
 .navy-background,
 .navy-background a:hover {
   background-color: var(--background-action-high-blue-france);
@@ -36,7 +40,7 @@
 .habilitation-bloc {
   position: absolute;
   background: #FFFFFF;
-  z-index: 100;
+  z-index: 10000;
   font-size: 14px;
   right: 1rem;
   top: auto;
