--- a/templates/layout/header_cerbere.html
+++ b/templates/layout/header_cerbere.html
@@ -31,9 +31,9 @@
                                 <a class="fr-mt-1w width-100" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
                                     <span class="fr-fi-question-line fr-mr-1w" aria-hidden="true"></span>
                                 </a>
-                                <!-- <a href="{% url 'settings:profile' %}">
-                                        <span class="fr-icon-settings-5-line fr-mr-1w" aria-hidden="true"></span>
-                                    </a> -->
+                                <a href="{% url 'settings:profile' %}">
+                                    <span class="fr-icon-settings-5-line fr-mr-1w" aria-hidden="true"></span>
+                                </a>
                                 <a href="{% url 'cas_ng_logout' %}?next=/">
                                     <span class="fr-fi-logout-box-r-line fr-mr-1w" aria-hidden="true">
                                     </span>
