--- a/templates/settings/user_profile.html
+++ b/templates/settings/user_profile.html
@@ -53,24 +53,26 @@
                             </button>
                         </form>
                     </div>
-                    <div class='fr-col-12 fr-mt-3w'>
+                    {% if not CERBERE_AUTH %}
+                        <div class='fr-col-12 fr-mt-3w'>
 
-                        <p>Si vous souhaitez ré-initialiser votre mot de passe, cliquez sur le bouton ci-dessous et suivez les instructions que vous allez recevoir par email</p>
-                        <form action="{% url 'password_reset' %}" method="post">
-                            {% csrf_token %}
-                            <input
-                                type="hidden"
-                                id="{{form.email.id_for_label}}"
-                                name="{{form.email.html_name}}"
-                                value="{{form.email.value}}" />
-                            <div class="fr-mt-3w">
-                                <button class="fr-btn" type="submit">
-                                    Réinitialiser mon mot de passe
-                                </button>
-                            </div>
-                        </form>
+                            <p>Si vous souhaitez ré-initialiser votre mot de passe, cliquez sur le bouton ci-dessous et suivez les instructions que vous allez recevoir par email</p>
+                            <form action="{% url 'password_reset' %}" method="post">
+                                {% csrf_token %}
+                                <input
+                                    type="hidden"
+                                    id="{{form.email.id_for_label}}"
+                                    name="{{form.email.html_name}}"
+                                    value="{{form.email.value}}" />
+                                <div class="fr-mt-3w">
+                                    <button class="fr-btn" type="submit">
+                                        Réinitialiser mon mot de passe
+                                    </button>
+                                </div>
+                            </form>
 
-                    </div>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
