--- a/static/css/ui_siap.css
+++ b/static/css/ui_siap.css
@@ -2,13 +2,13 @@
   flex: unset;
   position: relative
 }
-.fr-nav__btn[aria-controls="menu-/operation"] {
+/* .fr-nav__btn[aria-controls="menu-/operation"] {
   position: relative;
-}
+} */
 .fr-nav__btn[aria-controls="list-habilitation"]::before {
   display: none!important;
 }
-.fr-nav__btn[aria-controls="menu-/operation"]::before {
+/* .fr-nav__btn[aria-controls="menu-/operation"]::before {
   content: "";
   display: none;
   background-color: var(--background-active-blue-france);
@@ -19,7 +19,7 @@
   width: 100%;
   height: 2px;
   margin-top: 0;
-}
+} */
 .orange-background,
 .fr-nav__btn[aria-current].orange-background,
 .fr-nav__btn[aria-current].orange-background:hover,
