--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -19,11 +19,13 @@
                                 <h1>Gérer mes conventions APL</h1>
                                 <p class="apilos-subtitle">{{conventions.total_conventions}} convention{{ conventions.total_conventions|pluralize }} liée{{ conventions.total_conventions|pluralize }} à votre bailleur trouvée{{ conventions.total_conventions|pluralize }} dans APiLos</p>
                             </div>
-                            <div>
-                                <a class="fr-btn" href="{% url 'conventions:selection' %}">
-                                    <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
-                                </a>
-                            </div>
+                            {% if not CERBERE_AUTH %}
+                                <div>
+                                    <a class="fr-btn" href="{% url 'conventions:selection' %}">
+                                        <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
+                                    </a>
+                                </div>
+                            {% endif %}
                         {% elif request|is_instructeur or request.user.is_superuser %}
                             <div>
                                 <h2 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h2>
@@ -39,7 +41,7 @@
 
         {% include "conventions/convention_list.html" %}
 
-        {% if request|is_bailleur %}
+        {% if request|is_bailleur and not CERBERE_AUTH %}
             <div class="fr-container-fluid">
                 <div class="fr-container">
                     <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center">
