--- a/templates/index.html
+++ b/templates/index.html
@@ -38,12 +38,14 @@
                             <li>Intégrez les modifications demandées par l'instructeur</li>
                         </ul>
                     </div>
-                    <div class="fr-col-lg-4 fr-col-md-12 fr-mt-md-5w fr-mt-lg-10w">
-                        <a class="fr-btn" href="{% url 'login' %}">
-                            <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
-                            </span>Créer une convention
-                        </a>
-                    </div>
+                    {% if not CERBERE_AUTH %}
+                        <div class="fr-col-lg-4 fr-col-md-12 fr-mt-md-5w fr-mt-lg-10w">
+                            <a class="fr-btn" href="{% url 'login' %}">
+                                <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
+                                </span>Créer une convention
+                            </a>
+                        </div>
+                    {% endif %}
                 </div>
                 <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
                     <div class="fr-col-lg-1 fr-col-md-3">
