--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -21,7 +21,9 @@
         <input type="hidden" id="convention_uuid" value="{{convention.uuid}}">
         <div class="fr-container-fluid ds_banner">
             {% include "conventions/common/form_header.html" with convention=convention %}
-            {% include "common/step_progressbar.html" with convention=convention %}
+            {% if convention.statut != "6. Résiliée" %}
+                {% include "common/step_progressbar.html" with convention=convention %}
+            {% endif %}
             <div class="fr-container">
                 {% csrf_token %}
                 {% if convention.is_project %}
@@ -35,10 +37,11 @@
                         </div>
                     </div>
                 {% endif %}
-
-                <turbo-frame id="opened_comments_block" data-turbo="true">
-                    {% include "comments/opened_comments.html" %}
-                </turbo-frame>
+                {% if convention.statut != "6. Résiliée" %}
+                    <turbo-frame id="opened_comments_block" data-turbo="true">
+                        {% include "comments/opened_comments.html" %}
+                    </turbo-frame>
+                {% endif %}
 
                 <div class="fr-grid-row fr-grid-row--gutters fr-mt-1w">
                     {% if False %}
@@ -227,7 +230,7 @@
                                     <table>
                                         <thead>
                                             <tr>
-                                                {% if convention.statut != '1. Projet' %}
+                                                {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
                                                     {% include 'common/utils/comments_header.html' with object_name='reference_cadastrale' label='Références cadastrales' callback_click="refresh_opened_comments" %}
                                                 {% endif %}
                                                 <th scope="col">Section {% include "common/form/required_field_star.html" %}</th>
@@ -241,7 +244,7 @@
                                                 {% with reference_uuid=reference.uuid|slugify %}
                                                     {% with main_object_field="reference_cadastrale__uuid__"|add:reference_uuid %}
                                                         <tr id="{{main_object_field}}_group">
-                                                            {% if convention.statut != '1. Projet' %}
+                                                            {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
                                                                 <td id="{{main_object_field}}_div">
                                                                     {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Référence cadastrale" callback_click="refresh_opened_comments" %}
                                                                 </td>
@@ -298,7 +301,7 @@
                                     <table>
                                         <thead>
                                             <tr>
-                                                {% if convention.statut != '1. Projet' %}
+                                                {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
                                                     {% include 'common/utils/comments_header.html' with object_name='logement_edd' label="Logements de l'EDD" callback_click="refresh_opened_comments" %}
                                                 {% endif %}
                                                 <th scope="col">Financement {% include "common/form/required_field_star.html" %}</th>
@@ -311,7 +314,7 @@
                                                 {% with lgt_uuid=lgt.uuid|slugify %}
                                                     {% with main_object_field="logement_edd__uuid__"|add:lgt_uuid %}
                                                         <tr id="{{main_object_field}}_group">
-                                                            {% if convention.statut != '1. Projet' %}
+                                                            {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
                                                                 <td id="{{main_object_field}}_div">
                                                                     {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement de l'EDD" callback_click="refresh_opened_comments" %}
                                                                 </td>
@@ -358,7 +361,7 @@
                                     <table>
                                         <thead>
                                             <tr>
-                                                {% if convention.statut != '1. Projet' %}
+                                                {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
                                                     {% include 'common/utils/comments_header.html' with object_name='pret' label='Prêts et Financements' callback_click="refresh_opened_comments" %}
                                                 {% endif %}
                                                 <th scope="col">Numéro</th>
@@ -374,7 +377,7 @@
                                                 {% with pret_uuid=pret.uuid|slugify %}
                                                     {% with main_object_field="pret__uuid__"|add:pret_uuid %}
                                                         <tr id="{{main_object_field}}_group">
-                                                            {% if convention.statut != '1. Projet' %}
+                                                            {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
                                                                 <td id="{{main_object_field}}_div">
                                                                     {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Prêt ou financement" callback_click="refresh_opened_comments" %}
                                                                 </td>
@@ -431,7 +434,7 @@
                                     <table>
                                         <thead>
                                             <tr>
-                                                {% if convention.statut != '1. Projet' %}
+                                                {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
                                                     {% include 'common/utils/comments_header.html' with object_name='logement' label='Logements' callback_click="refresh_opened_comments" %}
                                                 {% endif %}
                                                 <th scope="col" class="col__width--150">Désignation {% include "common/form/required_field_star.html" %}</th>
@@ -450,7 +453,7 @@
                                                 {% with logement_uuid=logement.uuid|slugify %}
                                                     {% with main_object_field="logement__uuid__"|add:logement_uuid %}
                                                         <tr id="{{main_object_field}}_group">
-                                                            {% if convention.statut != '1. Projet' %}
+                                                            {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
                                                                 <td id="{{main_object_field}}_div">
                                                                     {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement" callback_click="refresh_opened_comments" %}
                                                                 </td>
@@ -487,7 +490,7 @@
                                                 {% endwith %}
                                             {% endfor %}
                                             <tr>
-                                                <td colspan="{% if convention.statut != '1. Projet' %}3{% else %}2{% endif %}" class="fr-text--lg">
+                                                <td colspan=" {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}3{% else %}2{% endif %}" class="fr-text--lg">
                                                     Total
                                                 </td>
                                                 <td id="total_sh" class="fr-text--lg">
@@ -537,7 +540,7 @@
                                     <table>
                                         <thead>
                                             <tr>
-                                                {% if convention.statut != '1. Projet' %}
+                                                {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
                                                     {% include 'common/utils/comments_header.html' with object_name='annexe' label="Annexes" callback_click="refresh_opened_comments" %}
                                                 {% endif %}
                                                 <th scope="col" class="col__width--150">Type d'annexe {% include "common/form/required_field_star.html" %}</th>
@@ -553,7 +556,7 @@
                                                 {% with annexe_uuid=annexe.uuid|slugify %}
                                                     {% with main_object_field="annexe__uuid__"|add:annexe_uuid %}
                                                         <tr id="{{main_object_field}}_group">
-                                                            {% if convention.statut != '1. Projet' %}
+                                                            {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
                                                                 <td id="{{main_object_field}}_div">
                                                                     {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Annexe" callback_click="refresh_opened_comments" %}
                                                                 </td>
@@ -630,7 +633,7 @@
                                     <table>
                                         <thead>
                                             <tr>
-                                                {% if convention.statut != '1. Projet' %}
+                                                {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
                                                     {% include 'common/utils/comments_header.html' with object_name='type_stationnement' label="Type de stationnements" callback_click="refresh_opened_comments" %}
                                                 {% endif %}
                                                 <th scope="col" class="col__width--150">Type de stationnement {% include "common/form/required_field_star.html" %}</th>
@@ -643,7 +646,7 @@
                                                 {% with stationnement_uuid=stationnement.uuid|slugify %}
                                                     {% with main_object_field="type_stationnement__uuid__"|add:stationnement_uuid %}
                                                         <tr id="{{main_object_field}}_group">
-                                                            {% if convention.statut != '1. Projet' %}
+                                                            {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
                                                                 <td id="{{main_object_field}}_div">
                                                                     {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Type de stationnement" callback_click="refresh_opened_comments" %}
                                                                 </td>
