--- a/templates/common/form/required_field.html
+++ b/templates/common/form/required_field.html
@@ -1,3 +1,3 @@
-{% if form_input.field.required %}
+{% if form_input.field.required or mandatory_input %}
     &nbsp;{% include "common/form/required_field_star.html" %}
 {% endif %}
