--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -31,7 +31,7 @@
                                     {% include "common/form/input_text.html" with form_input=form.siret object_field="bailleur__siret__"|add:form.uuid.value %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_number.html" with step="0.01" form_input=form.capital_social mandatory=False object_field="bailleur__capital_social__"|add:form.uuid.value %}
+                                    {% include "common/form/input_number.html" with step="0.01" form_input=form.capital_social object_field="bailleur__capital_social__"|add:form.uuid.value %}
                                 </div>
                             </div>
                         </div>
